--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
      <% if user_signed_in? %>
   
         <%= link_to "Logout", sessions_path, method: :delete, class: 'btn btn-danger' %>
-        <%= current_user.first_name %> <%= current_user.last_name %>
-        <%= link_to 'Edit Password', edit_user_path, class: 'btn btn-primary'%>
+        <%= link_to "#{current_user.first_name}" "#{current_user.last_name}", edit_user_path, class: 'btn btn-primary' %>
+        <%= link_to 'Edit Password', edit_user_password_path, class: 'btn btn-primary'%>
+
+      
         <% else %>
         <%= link_to "Log In", new_sessions_path, class: 'btn btn-success'%>
 
