--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,17 +8,19 @@
 
 <%= form_with model: @user, local:true do |f| %>
   <div class='form-group'>
-    <%= f.label :current_password %>
-    <%= f.password_field(:current_password, class: 'form-control')%>
+    <%= f.label :first_name %>
+    <%= f.text_field(:first_name, class: 'form-control')%>
   </div>
+
   <div class='form-group'>
-    <%= f.label :new_password %>
-    <%= f.password_field(:new_password, class: 'form-control')%>
+    <%= f.label :last_name %>
+    <%= f.text_field(:last_name, class: 'form-control')%>
   </div>
+
   <div class='form-group'>
-    <%= f.label :new_password_confirmation %>
-    <%= f.password_field(:new_password_confirmation, class: 'form-control')%>
+    <%= f.label :email %>
+    <%= f.email_field(:email, class: 'form-control')%>
   </div>
   
-  <%= f.submit "Update Password", class: 'btn btn-primary' %>
+  <%= f.submit "Update User Info", class: 'btn btn-primary' %>
 <% end %>
